--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,5 @@ dependencies {
 
     implementation "androidx.datastore:datastore-preferences:1.0.0-alpha01"
 
-//    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha07"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha07"
 }
